--- a/TechApp/TechApp.csproj
+++ b/TechApp/TechApp.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
@@ -14,6 +14,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Tech.DataAccess\Tech.DataAccess.csproj" />
+    <ProjectReference Include="..\Tech.Models\Tech.Models.csproj" />
+    <ProjectReference Include="..\Tech.Utility\Tech.Utility.csproj" />
   </ItemGroup>
 
 </Project>
