--- a/Tech.DataAccess/Tech.DataAccess.csproj
+++ b/Tech.DataAccess/Tech.DataAccess.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Tech.Utility\Tech.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
