--- a/TechApp/appsettings.json
+++ b/TechApp/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-UMD5NL0; Database=Tech;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=DESKTOP-UMD5NL0; Database=Tech;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-ML6SM2I; Database=Tech;Trusted_Connection=True;TrustServerCertificate=True"
+    
   }
 }
