Added identity user

--- a/TechApp/appsettings.json
+++ b/TechApp/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-ML6SM2I; Database=Tech;Trusted_Connection=True;TrustServerCertificate=True",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TechApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-ML6SM2I; Database=Tech;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
